added floating action button

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".services.AudioService"/>
+        <service android:name=".services.AudioService"
+            android:stopWithTask="false"/>
     </application>
 
 </manifest>
