--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".ui.activities.MainActivity"
+            android:name=".musicservice.mainui.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -28,12 +28,11 @@
         </activity>
 
         <activity
-            android:name=".ui.activities.NowPlayingActivity"
-            android:theme="@style/AppTheme">
-
+            android:name=".musicservice.mainui.nowplaying.NowPlayingActivity"
+            android:parentActivityName=".musicservice.mainui.MainActivity">
         </activity>
 
-        <service android:name=".MusicService"
+        <service android:name=".musicservice.MusicService"
             android:stopWithTask="false"
             android:exported="true">
             <intent-filter>
