--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,44 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.muiz6.musicplayer">
+	package="com.muiz6.musicplayer">
 
-    <permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
-        android:maxSdkVersion="28" />
+	<permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />
+	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+		android:maxSdkVersion="28" />
 
-    <application
-        android:name=".App"
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+	<application
+		android:name=".App"
+		android:allowBackup="true"
+		android:icon="@mipmap/ic_launcher"
+		android:label="@string/app_name"
+		android:roundIcon="@mipmap/ic_launcher_round"
+		android:supportsRtl="true"
+		android:theme="@style/AppTheme">
 
-        <activity
-            android:name=".musicservice.mainui.MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+		<activity
+			android:name=".musicservice.mainui.MainActivity"
+			android:label="@string/app_name"
+			android:theme="@style/AppTheme.NoActionBar">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
 
-        <activity
-            android:name=".musicservice.mainui.nowplaying.NowPlayingActivity"
-            android:parentActivityName=".musicservice.mainui.MainActivity">
-        </activity>
+		<activity
+			android:name=".musicservice.mainui.nowplaying.NowPlayingActivity"
+			android:parentActivityName=".musicservice.mainui.MainActivity">
+		</activity>
 
-        <service android:name=".musicservice.MusicService"
-            android:stopWithTask="false"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.media.browse.MediaBrowserService" />
-            </intent-filter>
-        </service>
-    </application>
+		<service android:name=".musicservice.MusicService"
+			android:stopWithTask="false"
+			android:exported="true">
+			<intent-filter>
+
+				<!--required filter MEDIA_BUTTON for notification buttons-->
+				<action android:name="android.intent.action.MEDIA_BUTTON" />
+				<action android:name="android.media.browse.MediaBrowserService" />
+			</intent-filter>
+		</service>
+
+		<!--doc says only required for ver below 5.0
+			but notification buttons are not working without this-->
+		<receiver android:name="androidx.media.session.MediaButtonReceiver">
+			<intent-filter>
+				<action android:name="android.intent.action.MEDIA_BUTTON" />
+			</intent-filter>
+		</receiver>
+
+	</application>
 
 </manifest>
