--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,11 +17,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
+
+    // later version causes crash when inflating BottomAppbar
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
@@ -29,6 +34,10 @@ dependencies {
     // media architecture dependencies
     implementation 'androidx.core:core:1.3.0'
     implementation 'androidx.media:media:1.1.0'
+
+    // exoplayer
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.11.6'
+    implementation 'com.google.android.exoplayer:extension-mediasession:2.11.6'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
