--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
 		android:theme="@style/AppTheme">
 
 		<activity
-			android:name=".musicservice.mainui.MainActivity"
+			android:name=".musicservice.ui.MainActivity"
 			android:label="@string/app_name"
 			android:theme="@style/AppTheme.NoActionBar">
 			<intent-filter>
@@ -28,8 +28,8 @@
 		</activity>
 
 		<activity
-			android:name=".musicservice.mainui.nowplaying.NowPlayingActivity"
-			android:parentActivityName=".musicservice.mainui.MainActivity">
+			android:name=".musicservice.ui.nowplaying.NowPlayingActivity"
+			android:parentActivityName=".musicservice.ui.MainActivity">
 		</activity>
 
 		<service android:name=".musicservice.MusicService"
