--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 
     // exoplayer
     implementation 'com.google.android.exoplayer:exoplayer-core:2.11.6'
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.11.6'
     implementation 'com.google.android.exoplayer:extension-mediasession:2.11.6'
 
     testImplementation 'junit:junit:4.12'
