--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+	xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.muiz6.musicplayer">
 
 	<permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />
+
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
@@ -28,12 +30,16 @@
 
 		<activity
 			android:name=".ui.nowplaying.NowPlayingActivity"
-			android:parentActivityName=".ui.main.MainActivity">
-		</activity>
+			android:parentActivityName=".ui.main.MainActivity" />
 
-		<service android:name=".musicservice.MusicService"
-			android:stopWithTask="false"
-			android:exported="true">
+		<activity
+			android:name=".ui.SettingActivity"
+			android:parentActivityName=".ui.main.MainActivity" />
+
+		<service
+			android:name=".musicservice.MusicService"
+			android:exported="true"
+			android:stopWithTask="false">
 			<intent-filter>
 				<action android:name="android.media.browse.MediaBrowserService" />
 			</intent-filter>
