reduced coupling between MainActivity and _ConnectionCallback, separated tab listener into its own class

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
 
 		<activity
 			android:name=".ui.SettingActivity"
+			android:label="@string/title_setting"
 			android:parentActivityName=".ui.main.MainActivity" />
 
 		<service
