--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,6 @@
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
-
 		<activity
 			android:name=".ui.main.MainActivity"
 			android:label="@string/app_name"
@@ -27,15 +26,17 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-
 		<activity
 			android:name=".ui.nowplaying.NowPlayingActivity"
 			android:parentActivityName=".ui.main.MainActivity" />
-
 		<activity
 			android:name=".ui.SettingActivity"
 			android:label="@string/title_setting"
 			android:parentActivityName=".ui.main.MainActivity" />
+		<activity
+			android:name=".ui.nowplaying.QueueActivity"
+			android:label="@string/title_queue"
+			android:parentActivityName=".ui.nowplaying.NowPlayingActivity"/>
 
 		<service
 			android:name=".musicservice.MusicService"
@@ -45,6 +46,6 @@
 				<action android:name="android.media.browse.MediaBrowserService" />
 			</intent-filter>
 		</service>
-
 	</application>
+
 </manifest>
