--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,11 @@ dependencies {
 	implementation "androidx.navigation:navigation-fragment:$nav_version"
 	implementation "androidx.navigation:navigation-ui:$nav_version"
 
+	// room library
+	def room_version = "2.2.5"
+	implementation "androidx.room:room-runtime:$room_version"
+	annotationProcessor "androidx.room:room-compiler:$room_version"
+
 	testImplementation 'junit:junit:4.12'
 	androidTestImplementation 'androidx.test.ext:junit:1.1.0'
 	androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
