completed content browsing, added queue feature

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,9 @@ dependencies {
 	implementation "androidx.room:room-runtime:$room_version"
 	annotationProcessor "androidx.room:room-compiler:$room_version"
 
+	// gson
+	implementation 'com.google.code.gson:gson:2.8.6'
+
 	testImplementation 'junit:junit:4.12'
 	androidTestImplementation 'androidx.test.ext:junit:1.1.0'
 	androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
